@@ -54,6 +54,8 @@ and co. from @code{configure} won't get overwritten. [Allin Cottrell]
 
 @item In @code{tabs} some minor issues have been fixed, like correct @code{raise} or @code{sticky}
 tabs, and some issue with @code{move-resize} tabs. [fuchur]
+
+@item Only allow '_NET_WM_WINDOW_TYPE_NORMAL to be marked as a tabbed window. [fuchur]
 @end itemize
 @item New Features
 @itemize @minus
