@@ -8,6 +8,10 @@
 	* lisp/sawfish/wm/tabs/tabgroup.jl: various bugfixes in raising,
 	stickying, move-resizeing and tab-index. [fuchur]
 
+	* lisp/sawfish/wm/tabs/tab.jl
+	* lisp/sawfish/wm/tabs/tabgroup.jl: only allow
+	'_NET_WM_WINDOW_TYPE_NORMAL to be marked as a tabbed window. [fuchur]
+
 	* man/news.texi: update
 
 2012-08-27  Christopher Roy Bratusek <nano@tuxfamily.org>
